Fixed changelog overflow and loader
Still need to figure out how to hide it properly though.

--- a/app/assets/stylesheets/modules/changelog.css.scss
+++ b/app/assets/stylesheets/modules/changelog.css.scss
@@ -1,8 +1,6 @@
 .changelog {
 	max-height: 500px;
-	overflow: scroll;
-	.changelog-loading { text-align: center }
-	/* ^ temp */
+	overflow-y: auto;
 
 	hr:first-of-type {
 		display: none;
